--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,16 @@ dependencies = [
   "pysqlite3-binary==0.5.4; sys_platform == 'linux' and platform_machine == 'x86_64'",
 ]
 
+[project.scripts]
+marv = "backend.cli:main"
+
+[build-system]
+requires = ["setuptools>=68"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["backend*", "core*"]
+
 [dependency-groups]
 dev = [
   "pytest==8.3.4",
@@ -33,6 +43,7 @@ dev = [
 
 [tool.uv]
 default-groups = ["dev"]
+package = true
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
