Adopt APScheduler heartbeat runtime with init and live reconfiguration

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,12 @@ TELEGRAM_TASK_WAIT_TIMEOUT_SECONDS=120
 TELEGRAM_POLL_INTERVAL_SECONDS=0.2
 TELEGRAM_ERROR_BACKOFF_SECONDS=2
 TELEGRAM_DROP_PENDING_ON_START=true
+
+# APScheduler heartbeat runtime (OpenClaw-style periodic tasks)
+HEARTBEAT_ENABLED=true
+HEARTBEAT_MODE=interval
+HEARTBEAT_INTERVAL_SECONDS=60
+HEARTBEAT_CRON="*/1 * * * *"
+HEARTBEAT_CORE_HEALTH_ENABLED=true
+HEARTBEAT_RESUME_APPROVED_TOOLS_ENABLED=true
+HEARTBEAT_EMIT_EVENTS=true
