chore: ignore external reference code directory

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ desktop/macos/node_modules/
 /IMPLEMENTATION_PLAN.md
 /PRD.md
 /TECH_STACK.md
+
+# External reference code
+/external_reference_code/
