feat: commit all pending runtime and evolution updates

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ HEARTBEAT_CRON="*/1 * * * *"
 HEARTBEAT_CORE_HEALTH_ENABLED=true
 HEARTBEAT_RESUME_APPROVED_TOOLS_ENABLED=true
 HEARTBEAT_EMIT_EVENTS=true
+HEARTBEAT_SKILL_DISTILL_ENABLED=false
+HEARTBEAT_SKILL_DISTILL_WINDOW_HOURS=24
+HEARTBEAT_SKILL_DISTILL_MIN_OCCURRENCES=4
+HEARTBEAT_SKILL_DISTILL_MAX_PATTERNS=8
+HEARTBEAT_SKILL_DISTILL_MAX_DISTILL=3
 
 # Optional core provider fallback matrix(JSON array)
 # Example:
@@ -27,3 +32,11 @@ CORE_PROVIDER_MATRIX_JSON=
 
 # Optional IPC tools config file
 # EDGE_IPC_TOOLS_PATH=./data/ipc-tools.json
+
+# Optional IM ingress auth token(s)
+# IM_INGRESS_TOKEN=replace_with_shared_secret
+# IM_INGRESS_TOKENS_JSON={"discord":"token-a","slack":"token-b","*":"fallback"}
+
+# Optional IM ingress sender policy (OpenClaw-style dm policy + allowlist)
+# EDGE_IM_SECURITY_PATH=./data/im-security.json
+# IM_INGRESS_SECURITY_JSON={"defaults":{"dm_policy":"open","allow_from":[]},"channels":{"discord":{"dm_policy":"allowlist","allow_from":["u-1"]}}}
