--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["backend*", "core*"]
+include = ["backend*", "core*", "marv*"]
 
 [dependency-groups]
 dev = [
